--- a/myproject/templates/restaurants/editResModal.html
+++ b/myproject/templates/restaurants/editResModal.html
@@ -10,136 +10,96 @@
              <div class="modal-body">
                  <h1>Edit Restaurant</h1>
                  <div class="card p-3 " style="">
-                     <ul class="nav nav-tabs" id="myTab" role="tablist">
-                         <li class="nav-item" role="presentation">
-                             <a class="nav-link active" id="restaurant-tab" data-bs-toggle="tab"
-                                 data-bs-target="#restaurant" href="#restaurant" role="tab" aria-controls="restaurant"
-                                 aria-selected="true">Restaurant</a>
-                     </ul>
-                     <form class="mt-3 ms-2" method="POST" action="{% url 'profile' restaurant.resID %}">
-                     {% csrf_token %}
-                         <div class="tab-content profile-tab" id="myTabContent">
-                             <div class="tab-pane fade show active pb-5" id="restaurant" role="tabpanel"
-                                 aria-labelledby="restaurant-tab">
-                                  <input type="text" class="form-control" id="name" name="resID" hidden
-                                 value="{{restaurant.resID}}">
-                                 <input type="text" class="form-control" id="name" name="companyID" hidden
-                                 value="{{restaurant.companyID}}">
-                                 <div class="form-row d-flex pb-2">
-                                     <div class="col-md-6" style="padding-right : 20px">
-                                         <label>Restaurant Name</label>
-                                         <input type="text" class="form-control" placeholder="{{restaurant.resName}} "
-                                             value="{{restaurant.resName}}" name="resName">
-                                     </div>
-                                     <div class="col-md-6">
-                                         <label>Address</label>
-                                         <input type="text" class="form-control" placeholder="{{restaurant.address}}"
-                                             value="{{restaurant.address}}" name="address">
-                                     </div>
-                                 </div>
-                                 <div class="form-row d-flex pb-2">
-                                     <div class="col-md-6" style="padding-right : 20px">
-                                         <label>subDistrict</label>
-                                         <input type="text" class="form-control"
-                                             placeholder="{{restaurant.subDistrict}}" value="{{restaurant.subDistrict}}"
-                                             name="subDistrict">
-                                     </div>
-                                     <div class="col-md-6">
-                                         <label>District</label>
-                                         <input type="text" class="form-control" placeholder="{{restaurant.district}}"
-                                             value="{{restaurant.district}}" name="district">
-                                     </div>
-                                 </div>
-                                 <div class="form-row d-flex pb-2">
-                                     <div class="col-md-6" style="padding-right : 20px">
-                                         <label>Province</label>
-                                         <input type="text" class="form-control" placeholder="{{restaurant.province}}"
-                                             value="{{restaurant.province}}" name="province">
-                                     </div>
-                                     <div class="col-md-6">
-                                         <label>Postal Code</label>
-                                         <input type="text" class="form-control" placeholder="{{restaurant.postalCode}}"
-                                             value="{{restaurant.postalCode}}" name="postalCode">
-                                     </div>
-                                 </div>
-                                 <div class="form-row d-flex pb-2">
-                                     <div class="col-md-6" style="padding-right : 20px">
-                                         <label>Email</label>
-                                         <input type="email" class="form-control" placeholder="{{restaurant.email}}"
-                                             value="{{restaurant.email}}" name="email">
-                                     </div>
-                                     <div class="col-md-6">
-                                         <label>Tel.</label>
-                                         <input type="text" class="form-control" placeholder="{{restaurant.tel}}"
-                                             value="{{restaurant.tel}}" name="tel">
-                                     </div>
-                                 </div>
-                                   <div class="form-row d-flex pb-2">
-                                     <div class="col-md-6" style="padding-right : 20px">
-                                         <label>Instagram</label>
-                                         <input type="text" class="form-control" placeholder="{{restaurant.ig}}"
-                                             value="{{restaurant.ig}}" name="ig">
-                                     </div>
-                                     <div class="col-md-6">
-                                         <label>Facebook</label>
-                                         <input type="text" class="form-control" placeholder="{{restaurant.fb}}"
-                                             value="{{restaurant.fb}}" name="fb">
-                                     </div>
-                                 </div>
-                                 <div class="form-row d-flex pb-2">
-                                     <div class="col-md-6">
-                                         <label>Category</label>
-                                         <select class="form-select" aria-label="Default select example"
-                                             style="width:50%" name="categoryID">
-                                             <option selected hidden value="{{restaurant.categoryID}}">
-                                                 {{restaurant.categoryID.categoryName}}</option>
-                                             {% for category in categories %}
-                                             <option value="{{category.categoryID}}">{{category.categoryName}}</option>
-                                             {% endfor %}
-                                         </select>
-                                     </div>
-                                     <div class="col-md-6">
-                                         <label>Logo</label>
-                                         <div class= "mt-1">
-                                             <label for="files" class="btn btn-primary btn-sm rounded-0">Choose
-                                                 file</label>
-                                             <input id="files" style="visibility:hidden; height:0" type="file"
-                                                 name="profilePic" value = "{{restaurant.profilePic}}">
-                                         </div>
-                                     </div>
-                                 </div>
-                                 <div class="form-row d-flex pb-2">
-                                     <div class="col-md-6">
-                                     </div>
-                                     <div class="col-md-6">
-                                         <label>Cover</label>
-                                         <div class="mt-1">
-                                             <label for="files" class="btn btn-primary btn-sm rounded-0">Choose
-                                                 file</label>
-                                             <input id="files" style="visibility:hidden; height:0" type="file"
-                                                 name="coverPic" value = "{{restaurant.coverPic}}">
-                                         </div>
-                                     </div>
-                                 </div>
-                                 <div class="form-row d-flex pb-2">
-                                     <div class="col-md-6">
-                                            <label>Open time</label>
-                                            <input type="time" class = "form-control" name="open" step="1">
-                                     </div>
-                                     <div class="col-md-6">
-                                            <label>Close time</label>
-                                            <input type="time" class = "form-control" name="close" step="1">
-                                     </div>
-                                 </div>
+
+                     <form class="mt-3 ms-2" method="POST" action="{% url 'profile' restaurant.resID %}"
+                         enctype="multipart/form-data">
+                         {% csrf_token %}
+                         <input type="text" class="form-control" id="name" name="resID" hidden
+                             value="{{restaurant.resID}}">
+                         <input type="text" class="form-control" id="name" name="companyID" hidden
+                             value="{{restaurant.companyID}}">
+                         <div class="form-row d-flex pb-2">
+                             <div class="col-md-6" style="padding-right : 20px">
+                                 <label>Restaurant Name</label>
+                                 <input type="text" class="form-control" placeholder="{{restaurant.resName}} "
+                                     value="{{restaurant.resName}}" name="resName">
+                             </div>
+                             <div class="col-md-6">
+                                 <label>Address</label>
+                                 <input type="text" class="form-control" placeholder="{{restaurant.address}}"
+                                     value="{{restaurant.address}}" name="address">
                              </div>
                          </div>
-                         <div class="modal-footer">
+                         <div class="form-row d-flex pb-2">
+                             <div class="col-md-6" style="padding-right : 20px">
+                                 <label>subDistrict</label>
+                                 <input type="text" class="form-control" placeholder="{{restaurant.subDistrict}}"
+                                     value="{{restaurant.subDistrict}}" name="subDistrict">
+                             </div>
+                             <div class="col-md-6">
+                                 <label>District</label>
+                                 <input type="text" class="form-control" placeholder="{{restaurant.district}}"
+                                     value="{{restaurant.district}}" name="district">
+                             </div>
+                         </div>
+                         <div class="form-row d-flex pb-2">
+                             <div class="col-md-6" style="padding-right : 20px">
+                                 <label>Province</label>
+                                 <input type="text" class="form-control" placeholder="{{restaurant.province}}"
+                                     value="{{restaurant.province}}" name="province">
+                             </div>
+                             <div class="col-md-6">
+                                 <label>Postal Code</label>
+                                 <input type="text" class="form-control" placeholder="{{restaurant.postalCode}}"
+                                     value="{{restaurant.postalCode}}" name="postalCode">
+                             </div>
+                         </div>
+                         <div class="form-row d-flex pb-2">
+                             <div class="col-md-6" style="padding-right : 20px">
+                                 <label>Category</label>
+                                 <select class="form-select" aria-label="Default select example" style="width:50%"
+                                     name="categoryID">
+                                     <option selected hidden value="{{restaurant.categoryID}}">
+                                         {{restaurant.categoryID.categoryName}}</option>
+                                     {% for category in categories %}
+                                     <option value="{{category.categoryID}}">{{category.categoryName}}</option>
+                                     {% endfor %}
+                                 </select>
+                             </div>
+
+                             <div class="col-md-6">
+                                 <label>Tel.</label>
+                                 <input type="tel" class="form-control" placeholder="{{restaurant.tel}}"
+                                     value="{{restaurant.tel}}" name="tel" pattern="^0[0-9]{9}">
+                             </div>
+                         </div>
+
+                         <div class="form-row d-flex pb-2">
+                             <div class="col-md-12">
+                                 <label>Email</label>
+                                 <input type="email" class="form-control" placeholder="{{restaurant.email}}"
+                                     value="{{restaurant.email}}" name="email">
+                                 </select>
+                             </div>
+                         </div>
+                         <div class="form-row d-flex pb-2">
+                             <div class="col-md-6">
+                                 <label>Logo Profile</label>
+                                 <input class="form-control" type="file" name="profilePic" id="formFile">
+                             </div>
+                             <div class="col-md-6">
+                                 <label for="">Cover Profile</label>
+                                 <input class="form-control" type="file" name="coverPic" id="formFile">
+                             </div>
+                         </div>
+                         <div class="d-flex justify-content-end">
                              <input type="submit" value="Submit" class="btn btn-primary">
                          </div>
                      </form>
                  </div>
              </div>
-
          </div>
+
      </div>
+ </div>
  </div>
