--- a/myproject/templates/restaurants/editCompModal.html
+++ b/myproject/templates/restaurants/editCompModal.html
@@ -10,91 +10,72 @@
              <div class="modal-body">
                  <h1>Edit Profile</h1>
                  <div class="card p-3 " style="">
-                     <ul class="nav nav-tabs" id="myTab" role="tablist">
-                         {% comment %} <li class="nav-item" role="presentation">
-                             <a class="nav-link active" id="restaurant-tab" data-bs-toggle="tab"
-                                 data-bs-target="#restaurant" href="#restaurant" role="tab" aria-controls="restaurant"
-                                 aria-selected="true">Restaurant</a>
-                         </li> {% endcomment %}
-                         <li class="nav-item" role="presentation">
-                             <a class="nav-link active" id="company-tab" data-bs-toggle="tab" data-bs-target="#company"
-                                 href="#company" role="tab" aria-controls="company" aria-selected="true">Company</a>
-                         </li>
-                     </ul>
-                      <form class="mt-3 ms-2" method="POST" action="{% url 'profile' company.companyID %}">
+                     <form class="mt-3 ms-2" method="POST" action="{% url 'profile' company.companyID %}"
+                         enctype="multipart/form-data">
                          {% csrf_token %}
-                         <div class="tab-content profile-tab" id="myTabContent">
-                             <input type="text" class="form-control" id="name" name="companyID" hidden
-                                 value="{{company.companyID}}">
-                             <input type="text" class="form-control" id="name" name="coverPic" hidden
-                                 value="{{company.coverPic}}">
-                             <div class="tab-pane fade show active pb-5" id="company" role="tabpanel"
-                                 aria-labelledby="company-tab">
-                                 <div class="form-row d-flex">
-                                     <div class="col-md-6" style="padding-right : 20px">
-                                         <label>Company Name</label>
-                                         <input type="text" class="form-control" placeholder="{{company.companyName}}"
-                                             name="companyName" value="{{company.companyName}}">
-                                     </div>
-                                     <div class="col-md-6">
-                                         <label>Address</label>
-                                         <input type="text" class="form-control" placeholder="{{company.address}}"
-                                             name="address" value="{{company.address}}">
-                                     </div>
-                                 </div>
-                                 <div class="form-row d-flex pb-2">
-                                     <div class="col-md-6" style="padding-right : 20px">
-                                         <label>subDistrict</label>
-                                         <input type="text" class="form-control" placeholder="{{company.subDistrict}}"
-                                             name="subDistrict" value="{{company.subDistrict}}">
-                                     </div>
-                                     <div class="col-md-6">
-                                         <label>District</label>
-                                         <input type="text" class="form-control" placeholder="{{company.district}}"
-                                             name="district" value="{{company.district}}">
-                                     </div>
-                                 </div>
-                                 <div class="form-row d-flex pb-2">
-                                     <div class="col-md-6" style="padding-right : 20px">
-                                         <label>Province</label>
-                                         <input type="text" class="form-control" placeholder="{{company.province}}"
-                                             name="province" value="{{company.province}}">
-                                     </div>
-                                     <div class="col-md-6">
-                                         <label>Postal Code</label>
-                                         <input type="text" class="form-control" placeholder="{{company.postalCode}}"
-                                             name="postalCode" value="{{company.postalCode}}">
-                                     </div>
-                                 </div>
-                                 <div class="form-row d-flex pb-2">
-                                     <div class="col-md-6" style="padding-right : 20px">
-                                         <label>Email</label>
-                                         <input type="email" class="form-control" placeholder="{{company.email}}"
-                                             name="email" value="{{company.email}}">
-                                     </div>
-                                     <div class="col-md-6">
-                                         <label>Tel.</label>
-                                         <input type="tel" class="form-control" placeholder="{{company.tel}}" name="tel"
-                                             value="{{company.tel}}">
-                                     </div>
-                                 </div>
-                                 <div class="form-row d-flex justify-content-end pb-2">
-                                     <div class="col-md-6">
-                                         <label>Logo</label>
-                                         <div class=mt-1>
-                                             <label for="files" class="btn btn-primary btn-sm rounded-0">Choose
-                                                 file</label>
-                                             <input id="files" style="visibility:hidden; height:0" type="file"
-                                                 name="profilePic" value="{{company.profilePic}}">
-                                         </div>
-                                     </div>
-                                 </div>
+                         <input type="text" class="form-control" id="name" name="companyID" hidden
+                             value="{{company.companyID}}">
+                         <div class="form-row d-flex pb-2">
+                             <div class="col-md-6" style="padding-right : 20px">
+                                 <label>company Name</label>
+                                 <input type="text" class="form-control" placeholder="{{company.companyName}} "
+                                     value="{{company.companyName}}" name="companyName">
+                             </div>
+                             <div class="col-md-6">
+                                 <label>Address</label>
+                                 <input type="text" class="form-control" placeholder="{{company.address}}"
+                                     value="{{company.address}}" name="address">
                              </div>
                          </div>
-                         <div class="modal-footer">
+                         <div class="form-row d-flex pb-2">
+                             <div class="col-md-6" style="padding-right : 20px">
+                                 <label>subDistrict</label>
+                                 <input type="text" class="form-control" placeholder="{{company.subDistrict}}"
+                                     value="{{company.subDistrict}}" name="subDistrict">
+                             </div>
+                             <div class="col-md-6">
+                                 <label>District</label>
+                                 <input type="text" class="form-control" placeholder="{{company.district}}"
+                                     value="{{company.district}}" name="district">
+                             </div>
+                         </div>
+                         <div class="form-row d-flex pb-2">
+                             <div class="col-md-6" style="padding-right : 20px">
+                                 <label>Province</label>
+                                 <input type="text" class="form-control" placeholder="{{company.province}}"
+                                     value="{{company.province}}" name="province">
+                             </div>
+                             <div class="col-md-6">
+                                 <label>Postal Code</label>
+                                 <input type="text" class="form-control" placeholder="{{company.postalCode}}"
+                                     value="{{company.postalCode}}" name="postalCode">
+                             </div>
+                         </div>
+                         <div class="form-row d-flex pb-2">
+
+                             <div class="col-md-6">
+                                 <label>Email</label>
+                                 <input type="email" class="form-control" placeholder="{{company.email}}"
+                                     value="{{company.email}}" name="email">
+                                 </select>
+                             </div>
+
+                             <div class="col-md-6">
+                                 <label>Tel.</label>
+                                 <input type="tel" class="form-control" placeholder="{{company.tel}}"
+                                     value="{{company.tel}}" name="tel" pattern="^0[0-9]{9}">
+                             </div>
+                         </div>
+                         <div class="form-row d-flex pb-2 ">
+                             <div class="col-md-6">
+                                 <label>Logo Profile</label>
+                                 <input class="form-control" type="file" name="profilePic" id="formFile">
+                             </div>
+                         </div>
+                         <div class="d-flex justify-content-end">
                              <input type="submit" value="Submit" class="btn btn-primary">
                          </div>
-                     </form> 
+                     </form>
                  </div>
              </div>
 
