--- a/myproject/templates/users/editProfileModal.html
+++ b/myproject/templates/users/editProfileModal.html
@@ -10,67 +10,56 @@
              <div class="modal-body">
                  <h1 class="text-center">Edit Profile</h1>
                  <div class="card p-3 " style="">
-                     <form class="mt-3 ms-2" method="POST" action="editProfile">
+                     <form class="mt-3 ms-2" method="POST" action="" enctype="multipart/form-data">
+                         {% csrf_token %}
                          <div class="row  mb-2">
-                             <img src="{{profile.getProfilePic}}" class="rounded mx-auto d-block img-contain"
-                                 style="height: 100px;" alt="">
+                             <img src="{{profile.getProfilePic}}"
+                                 class="img-contain rounded mx-auto d-block img-contain" style="height: 100px;" alt="">
                          </div>
                          <div class="row  mb-2">
-                             <label for="files" class="btn-sm btn-info rounded-lg rounded mx-auto d-block text-center"
+                             <label for="files"
+                                 class="btn-sm btn-info rounded-lg rounded mx-auto d-block text-center form-label"
                                  style="width: 20%;">Change
                                  Photo</label>
-                             <input name="id" hidden type="text" value="{{profile.memberID}}">
-                             <input id="files" style="visibility:hidden; height:0;" alt="submit" type="file">
+                             <input name="memberID" hidden type="text" value="{{profile.memberID}}">
+                             <input id="files" style="visibility:hidden; height:0;" type="file"
+                                 value="{{profile.getProfilePic}}" name="profilePic">
                          </div>
                          <div class="row  mb-2">
                              <div class="col-md-6">
-                                 <label>Firstname</label>
                                  <input type="text" class="form-control" placeholder="{{profile.fName}}"
-                                     value="{{profile.fName}}">
+                                     value="{{profile.fName}}" name="fName">
+                                 <label class="form-label">Firstname</label>
                              </div>
                              <div class="col-md-6">
-                                 <label>Lastname</label>
                                  <input type="text" class="form-control" id="inputPassword4"
-                                     placeholder="{{profile.lName}}" value="{{profile.lName}}">
+                                     placeholder="{{profile.lName}}" value="{{profile.lName}}" name="lName">
+                                 <label class="form-label">Lastname</label>
                              </div>
                          </div>
-                         <div class="row  mb-2">
+                         <div class="row mb-2">
                              <div class="col-md-12">
-                                 <label>Email</label>
                                  <input type="email" class="form-control" placeholder="{{profile.email}}"
-                                     value="{{profile.email}}">
+                                     value="{{profile.email}}" name="email">
+                                 <label class="form-label">Email</label>
                              </div>
                          </div>
-                         <div class="row  mb-2">
+
+                         <div class="row mb-4">
                              <div class="col-md-6">
-                                 <label>Password</label>
-                                 <input type="text" class="form-control" placeholder="" value="">
-                             </div>
-                             <div class="col-md-6">
-                                 <label>Confirm password</label>
-                                 <input type="text" class="form-control" id="" placeholder="" value="">
-                             </div>
-                         </div>
-                         <div class="row  mb-4">
-                             <div class="col-md-4">
-                                 <label>Date of Birth</label>
-                                 <input type=" date" class="form-control" placeholder="{{profile.dob}}"
-                                     value="{{profile.dob}}">
-                             </div>
-                             <div class="col-md-4">
-                                 <label>Gender</label>
-                                 <select class="form-select" aria-label="Default select example" name="categoryID">
-                                     <option selected hidden value="{{profile.gender}}">
+                                 <select class="form-select" aria-label="Default select example" name="gender">
+                                     <option selected hidden value="{{profile.gender}}">{{profile.gender}}
                                      </option>
                                      <option value="male">male</option>
                                      <option value="female">female</option>
                                      <option value="other">other</option>
                                  </select>
+                                 <label class="form-label">Gender</label>
                              </div>
-                             <div class="col-md-4">
-                                 <label>Tel</label>
-                                 <input type=" text" class="form-control" id="inputPassword4"
-                                     placeholder="{{profile.tel}}" value="{{profile.tel}}">
+                             <div class="col-md-6">
+                                 <input type=" text" class="form-control" id="" name="tel" placeholder="{{profile.tel}}"
+                                     value="{{profile.tel}}" pattern="^0[0-9]{9}">
+                                 <label class="form-label">Tel</label>
                              </div>
                          </div>
                          <div class="d-flex justify-content-end">
