--- a/myproject/templates/components/sidebar.html
+++ b/myproject/templates/components/sidebar.html
@@ -4,7 +4,8 @@
 <div class="offcanvas offcanvas-start d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" tabindex="-1"
     id="offcanvasWithBackdrop" aria-labelledby="offcanvasWithBackdropLabel">
     <div class="offcanvas-header">
-        <a href="{% url 'profile' request.user.resID %}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+        <a href="{% url 'profile' request.user.resID %}"
+            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
             <img src="{{ request.user.resID.getProfilePic }}" class="img-contain border border-white rounded-3"
                 style="height: 60px; width: 60px;">
             <span class="fs-4 ms-3">{{request.user.resID.resName}}</span>
@@ -32,12 +33,21 @@
             </li>
 
             {% elif user.role == "staff"%}
-            <a href="{%url 'queueManagement' request.user.resID %}" class="nav-link text-white" aria-current="page">
+            <a href="{%url 'staffHome' request.user.resID %}" class="nav-link text-white" aria-current="page">
                 <svg class="bi me-2" width="16" height="16">
                     <use xlink:href="#home"></use>
                 </svg>
                 Queue
             </a>
+            <a href="{%url 'staffHome' request.user.resID %}" class="nav-link text-white" aria-current="page"
+                data-bs-toggle="modal" data-bs-target="#business" href="#home">
+                <svg class="bi me-2" width="16" height="16">
+                    <use xlink:href="#home"></use>
+                </svg>
+                Start my own
+            </a>
+
+
             {% endif %}
 
             </li>
@@ -68,13 +78,14 @@
             <li><a class="dropdown-item" href="#">Sign out</a></li>
         </ul>
     </div> {% endcomment %}
-    
+
 </div>
 {% elif user.role ==  "executive" %}
 <div class="offcanvas offcanvas-start d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" tabindex="-1"
     id="offcanvasWithBackdrop" aria-labelledby="offcanvasWithBackdropLabel">
     <div class="offcanvas-header text-white">
-        <a href="{% url 'profile' request.user.companyID %}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+        <a href="{% url 'profile' request.user.companyID %}"
+            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
             <img src="{{ request.user.companyID.getProfilePic }}" class="img border border-white rounded-3"
                 style="height: 60px; width: 60px;">
             <span class="fs-4 ms-3 text-white">{{request.user.companyID.companyName}}</span>
@@ -112,3 +123,5 @@
     <hr>
 </div>
 {% endif %}
+
+{% include 'restaurants/createBusModal.html' %}
