--- a/myproject/templates/restaurants/menu.html
+++ b/myproject/templates/restaurants/menu.html
@@ -27,13 +27,22 @@
     </div>
   </div>
   {% endfor %}
-  {% if user.role != "member" and user.role != "staff" and request.user.resID_id == restaurant.resID %}
+  {% if user.role == "manager" and request.user.resID_id == restaurant.resID %}
   <div class="row g-4 d-flex justify-content-end">
     <div class="row" style="width : 20%;">
       <button type="button" class="btn btn-warning btn-lg" data-bs-toggle="modal" data-bs-target="#menuModal">
         Edit
       </button>
+    </div>
+  </div>
+</div>
 
+  {% elif user.role == "executive" and request.user.companyID_id == restaurant.companyID_id %}
+  <div class="row g-4 d-flex justify-content-end">
+    <div class="row" style="width : 20%;">
+      <button type="button" class="btn btn-warning btn-lg" data-bs-toggle="modal" data-bs-target="#menuModal">
+        Edit
+      </button>
     </div>
   </div>
 </div>
