--- a/myproject/templates/queue/queue.html
+++ b/myproject/templates/queue/queue.html
@@ -9,6 +9,9 @@
 			<th scope="col">Reserved Time</th>
 			<th scope="col">Status</th>
 			<th scope="col">Update</th>
+			<th scope="col">Success</th>
+			<th scope="col">Fail</th>
+			<th scope="col">Cancel</th>
 		</tr>
 	</thead>
 	<tbody id="queueTable">
@@ -20,17 +23,45 @@
 			<td class="text-danger">{{queues_res.reserveDateTime}}</td>
 			<form action="{% url 'updateQueue' queues_res.queueID %}" method="POST" class="d-flex ">
 				{% csrf_token %}
+				<input type="hidden" name="next" value="{{ request.path }}">
 				<td>
 					<select class="form-select d-inline me-2" style="width: 150px;" name="status">
 						<option selected hidden>{{queues_res.status}}</option>
-						<option value="success">success</option>
 						<option value="calling">calling</option>
 						<option value="waiting">waiting</option>
-						<option value="fail">fail</option>
 					</select>
 				</td>
 				<td>
-					<button class="btn btn-primary d-blcok" type="submit">Update</button>
+					<button class="btn btn-primary d-blcok" type="submit">Update
+						<input type="text" name="queueIsPass" value="false" hidden></button>
+				</td>
+			</form>
+			<form action="{% url 'updateQueue' queues_res.queueID %}" method="POST" class="d-flex ">
+				{% csrf_token %}
+				<input type="hidden" name="next" value="{{ request.path }}">
+				<td>
+					<button class="btn btn-success d-blcok" type="submit">Success
+						<input type="text" name="queueIsPass" value="true" hidden>
+						<input type="text" name="status" value="success" hidden>
+					</button>
+				</td>
+			</form>
+			<form action="{% url 'updateQueue' queues_res.queueID %}" method="POST" class="d-flex ">
+				{% csrf_token %}
+				<input type="hidden" name="next" value="{{ request.path }}">
+				<td>
+					<button class="btn btn-danger d-blcok" type="submit">Fail
+						<input type="text" name="queueIsPass" value="true" hidden>
+						<input type="text" name="status" value="fail" hidden></button>
+				</td>
+			</form>
+			<form action="{% url 'updateQueue' queues_res.queueID %}" method="POST" class="d-flex ">
+				{% csrf_token %}
+				<input type="hidden" name="next" value="{{ request.path }}">
+				<td>
+					<button class="btn btn-danger d-blcok" type="submit">Cancel
+						<input type="text" name="queueIsPass" value="true" hidden>
+						<input type="text" name="status" value="cancel" hidden></button>
 				</td>
 			</form>
 		</tr>
@@ -46,16 +77,44 @@
 			<form action="{% url 'updateQueue' queues_res.queueID %}" method="POST" class="d-flex ">
 				{% csrf_token %}
 				<td>
+					<input type="hidden" name="next" value="{{ request.path }}">
 					<select class="form-select d-inline me-2" style="width: 150px;" name="status">
 						<option selected hidden>{{queues_res.status}}</option>
-						<option value="success">success</option>
 						<option value="calling">calling</option>
 						<option value="waiting">waiting</option>
-						<option value="fail">fail</option>
 					</select>
 				</td>
 				<td>
-					<button class="btn btn-primary d-blcok" type="submit" >Update</button>
+					<button class="btn btn-primary d-blcok" type="submit">Update
+						<input type="text" name="queueIsPass" value="false" hidden></button>
+				</td>
+			</form>
+			<form action="{% url 'updateQueue' queues_res.queueID %}" method="POST" class="d-flex ">
+				{% csrf_token %}
+				<td>
+					<input type="hidden" name="next" value="{{ request.path }}">
+					<button class="btn btn-success d-blcok" type="submit">Success
+						<input type="text" name="queueIsPass" value="true" hidden>
+						<input type="text" name="status" value="success" hidden>
+					</button>
+				</td>
+			</form>
+			<form action="{% url 'updateQueue' queues_res.queueID %}" method="POST" class="d-flex ">
+				{% csrf_token %}
+				<td>
+					<input type="hidden" name="next" value="{{ request.path }}">
+					<button class="btn btn-danger d-blcok" type="submit">Fail
+						<input type="text" name="queueIsPass" value="true" hidden>
+						<input type="text" name="status" value="fail" hidden></button>
+				</td>
+			</form>
+			<form action="{% url 'updateQueue' queues_res.queueID %}" method="POST" class="d-flex ">
+				{% csrf_token %}
+				<td>
+					<input type="hidden" name="next" value="{{ request.path }}">
+					<button class="btn btn-danger d-blcok" type="submit">Cancel
+						<input type="text" name="queueIsPass" value="true" hidden>
+						<input type="text" name="status" value="cancel" hidden></button>
 				</td>
 			</form>
 		</tr>
