--- a/myproject/templates/components/base.html
+++ b/myproject/templates/components/base.html
@@ -12,6 +12,7 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/select.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/rating.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/slidebar.css' %}" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -33,6 +34,8 @@
 
 
 
+
+
     <title>{% block title %}YENYEN{% endblock %}</title>
 
 </head>
@@ -46,8 +49,22 @@
         {% load sweetify %}
         {% sweetify %}
     </div>
+    <script src="{% static 'js/main.js' %}"></script>
+    {% comment %} {% endcomment %}
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/Chart.min.js' %}"></script>
+    <script type="text/javascript">
+        $.get('{% url "line_chart_json" %}', function (data) {
+            var ctx = $("#myChart").get(0).getContext("2d");
+            new Chart(ctx, {
+                type: 'line',
+                data: data
+            });
+        });
+    </script>
 </body>
-<script src="{% static 'js/main.js' %}"></script>
+
+
 
 <footer class="bg-light text-center text-lg-start mt-5">
     <!-- Copyright -->
