--- a/myproject/templates/components/sidebar.html
+++ b/myproject/templates/components/sidebar.html
@@ -32,13 +32,13 @@
                 </a>
             </li>
 
-            {% elif user.role == "staff"%}
+            {% comment %} {% elif user.role == "staff"%}
             <a href="{%url 'staffHome' request.user.resID %}" class="nav-link text-white" aria-current="page">
                 <svg class="bi me-2" width="16" height="16">
                     <use xlink:href="#home"></use>
                 </svg>
                 Queue
-            </a>
+            </a> {% endcomment %}
             <a href="{%url 'staffHome' request.user.resID %}" class="nav-link text-white" aria-current="page"
                 data-bs-toggle="modal" data-bs-target="#business" href="#home">
                 <svg class="bi me-2" width="16" height="16">
