--- a/myproject/templates/app/index.html
+++ b/myproject/templates/app/index.html
@@ -1,7 +1,7 @@
 {% extends 'components/base.html' %}
 {% block title %}Home{% endblock title %}
 {% block content %}
-<div class="input-group rounded-lg mt-2">
+<div class="input-group rounded-lg mt-2 mb-2">
     <input id="Search-main" type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
         aria-describedby="search-addon" />
     <span class="input-group-text border-0" id="search-addon">
@@ -10,7 +10,7 @@
 </div>
 
 <div class="row row-cols-4 row-cols-md-6">
-    {% for category in categorys %}
+    {% for category in categories %}
     {% include 'restaurants/categoryCard.html'%}
     {% endfor %}
 </div>
