--- a/myproject/templates/restaurants/editRoleModal.html
+++ b/myproject/templates/restaurants/editRoleModal.html
@@ -10,7 +10,7 @@
             <div class="modal-body">
 
                 <h1>eiei</h1>
-                <div class="card p-3 " style="">
+                <div class="card p-3 rounded-3 border border-3 " style="">
                     <form action="{% url 'editRole' pk %}" method="POST">
                         {% csrf_token %}
                         {{form.as_table}}
