--- a/myproject/templates/restaurants/indexResCard.html
+++ b/myproject/templates/restaurants/indexResCard.html
@@ -1,25 +1,16 @@
 {% load static %}
 
 <div class="col-md-4 All {{restaurant.categoryID.fullCate}}" id="card-filter">
-    <div class="card p-3 mb-2 ">
-        <div class="d-flex justify-content-between">
-            <a href="{% url 'resCard' restaurant.resID %}">
-                <img src="{{restaurant.getProfilePic}}" class="card-img img-cover resImg mx-auto d-block "
-                    style="height: 200px;">
-            </a>
-        </div>
+    <div class="card p-3 mb-2 rounded-3 border border-3 ">
+        <a href="{% url 'resCard' restaurant.resID %}">
+            <img src="{{restaurant.getProfilePic}}" class="card-img img-cover resImg mx-auto d-block "
+                style="height: 200px;">
+        </a>
         <div class="mt-2">
             <div class="card-body d-flex flex-column">
                 <h4 class="card-title">{{restaurant.resName}}</h4>
                 <p class="card-text mt-auto">{{restaurant.categoryID.categoryName}}</p>
-                <p class="card-text ">
-                    <i class="fas fa-star text-warning"></i>
-                    <span> {{rating.rating__avg}}</span>
-                    <i class="far fa-clock text-secondary"></i>
-                    <span> 15 min</span>
-                    <i class="fas fa-map-marker-alt text-secondary"></i>
-                    <span> 2 km</span>
-                </p>
+
             </div>
         </div>
     </div>
