--- a/myproject/templates/restaurants/resCard.html
+++ b/myproject/templates/restaurants/resCard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row justify-content-center mt-4">
   <div class="col-xl-8">
-    <div class="card p-3" style="">
+    <div class="card p-3 rounded-3 border border-3" style="">
       <img src="{{restaurant.getCoverPic}}" class="imgBg img-cover" alt="Responsive image" />
       <img src="{{restaurant.getProfilePic}}" class="imgCollab img-cover" alt="Responsive image" />
       <div class="row">
