create comp and score

--- a/myproject/templates/users/profile.html
+++ b/myproject/templates/users/profile.html
@@ -397,7 +397,7 @@
                             {{profile.fullName}}
                         </h5>
 
-                        <span class="text-muted"> Point : {{point}}</span>
+                        <span class="text-muted"> Point : {{point.point__sum}}/100</span>
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
                             <li class="nav-item" role="presentation">
                                 <a class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home"
